# diffSPH

./: .gitignore  InitializationTest.ipynb  Kernels.ipynb  LICENSE  NeighborSearchTest.ipynb  README.md  archTest-Copy2.ipynb  compressibleSPHTest.ipynb  deps.md  governing equations.md  neighborhood.cpp  neighborhood.cu  neighborhood.h  neighborhoodDebug.ipynb  noiseTest.ipynb  pyproject.toml  test.md
configs/: colgen_dfsph.toml  oscillating_drop_deltasph.toml  periodicDomain.toml
generative/: batch.sh  batchTest.sh  dfsph.py  plot.sh  random_periodic.ipynb  tgv_sps.ipynb  tgv_sps.py
notebooks/: NewShifting.ipynb  NewShiftingv2.ipynb  boundarySampling.ipynb  flowPastBoundary.ipynb  kernelFunctions.ipynb  oneDimensionalSPH.ipynb  oscillatingDroplet.ipynb  particleInitialization1D.ipynb  pdfBasedSampling.ipynb  sdf2D.ipynb  sdfSampling.ipynb  sphScalarOperations.ipynb  sps.ipynb  staticBoundaryTest.ipynb  surfaceDetection.ipynb  uniformSampling.ipynb
notebooks/cppSrc/: vectorProjection.cpp
partiBench/: 01_TGV.ipynb  02_generative.ipynb  02_outlet.ipynb  03_dambreak copy 2.ipynb  03_dambreak copy.ipynb  03_dambreak.ipynb  05_bounded_obstacle_flow.ipynb  06_moving_obstacle.ipynb  07_flow_past.ipynb  BiCG.ipynb  DFSPH.ipynb  ISPH copy.ipynb  LDC.ipynb  Untitled-1.ipynb  cppOp.cpp  cppOp.cu  cppOp.h  cppOp.ipynb
partiBench/configurations/: 01_tgv.toml  02_outlet.toml
sphOperations/: 01_interpolate.ipynb  cppOp.cpp  cppOp.cu  cppOp.h  cppTest  cppTest.cpp
validation/: impact.ipynb  oscillatingDroplet.ipynb  rotatingPatch.ipynb  taylorGreenVortex.ipynb
(+105 files in other folders)
